--- a/index.html
+++ b/index.html
@@ -18,11 +18,26 @@
       display: flex;
       justify-content: center;
       position: relative;
+      margin: 20px;
+      outline: none;
     }
 
     .bar {
       display: absolute;
       top: 50%;
+      width: 487px;
+      height: 34px;
+      border-radius: 20px;
+      border-width: 1px;
+      border-color: #e4e4e4
+    }
+
+    .bar:hover {
+      box-shadow: 1px 1px 10px grey;
+    }
+
+    .bar:focus {
+      outline: none;
     }
 
     .right2,
@@ -30,23 +45,49 @@
       float: right;
       margin: 0 0 0 10px;
     }
+
+    #buttons {
+      display: flex;
+      justify-content: center;
+      position: relative;
+      margin: -10px;
+    }
+
+    .results {
+      font-size: 14px;
+      margin: 11px 4px;
+      padding: 0 16px;
+      line-height: 27px;
+      height: 36px;
+      text-align: center;
+      cursor: pointer;
+    }
+
+    .results:hover {
+      background-color: rgb(248, 249, 250) border: 1px solid #f8f9fa;
+      border-radius: 4px;
+    }
   </style>
 </head>
 
 <body>
   <div id="navbar">
     <nav>
-      <a href="#">About</a>
-      <a href="#">Store</a>
-      <a class="right1" href="#">Gmail</a>
-      <a class="right2" href="#">Images</a>
+      <a href="#" style="color: black;">About</a>
+      <a href="#" style="color: black;">Store</a>
+      <a class="right1" href="#" style="color: black;">Gmail</a>
+      <a class="right2" href="#" style="color: black;">Images</a>
     </nav>
   </div>
   <div id="google">
     <img class="logo" alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
   </div>
   <div id="search">
-    <input class="bar" type="text" placeholder="Search..."><button>Go</button>
+    <input class="bar" type="text" placeholder="Search...">
+  </div>
+  <div id="buttons">
+    <button type="submit" class="results">Google Search</button>
+    <button type="submit" class="results">I'm Feeling Lucky</button>
   </div>
 </body>
 
